fixed getting dictionaries